# collaborative-marsupial-robots

./: README.md
Jaguar_robot/: CMakeLists.txt  package.xml
Jaguar_robot/config/: joint_names_Jaguar_30.yaml
Jaguar_robot/launch/: display.launch  gazebo.launch
Jaguar_robot/meshes/: bas1.STL  bas2.STL  base_link.STL  f1.STL  f2.STL  f3.STL  f4.STL  h1.STL  h2.STL  p1.STL  p2.STL  r1.STL  r2.STL  r3.STL  r4.STL  rampa_des.STL  tap1.STL
Jaguar_robot/urdf/: Jaguar_30.csv  Jaguar_30.urdf
explorer_robot/: CMakeLists.txt  package.xml
explorer_robot/ROBCIB/: Escritorio.SLDPRT  Escritorio.STL  pantalla.SLDPRT  pantalla.STL  suelo.SLDPRT  suelo.STL
explorer_robot/config/: joint_names_explorador_2.yaml
explorer_robot/launch/: display.launch  gazebo.launch  tasar.launch
explorer_robot/meshes/: base_link.STL  corr_der_link.STL  corr_izq_link.STL  der_inf_link.STL  der_sup_link.STL  izq_sup_link.STL
explorer_robot/urdf/: explorador_2 (copia).urdf  explorador_2.csv  explorador_2.urdf
explorer_robot/worlds/: La_palma.world  TASAR_1.world  TASAR_2.world  TASAR_3.world  escrit.SLDPRT  grada1.SLDPRT  grada1.STL  grada2.SLDPRT  heightmap.world  isla_ocean.world  labo.world  ladrillo.world  sureveg.world  sureveg2.world  sureveg3.world  sureveg4.world  test1.world  volcano.world
explorer_robot/worlds/Plantas/: arbol.stl  arbol2.stl  arbol_1.stl  escrit.stl  grada2.stl  plata_1.stl  roca.stl  roca2.stl
explorer_robot/worlds/creado/: model.config  model.sdf
gazebo_plugins/: README.md
gazebo_plugins/Omega/: README.md  UVGI_Irradiance_Calculation (1).m  UVLamp.slx  detection.py  video_det.py
lidar_scanner_mock/lidar_transform/: CMakeLists.txt
lidar_scanner_mock/lidar_transform/config/: view.rviz
lidar_scanner_mock/lidar_transform/launch/: run.launch  urg.launch
lidar_scanner_mock/lidar_transform/src/: hokuyo.cpp  lidar_mock.cpp  lidar_transform.cpp  servo_mock.cpp
programs_py/: CMakeLists.txt  package.xml
programs_py/src/: DepthCamera_2022-07-28-15-32-16.json  RenderOption_2022-07-28-15-31-54.json  RenderOption_2022-07-28-15-32-41.json  ScreenCamera_2022-07-28-15-31-55.json  angulo_plataforma.py  aruko.py  (+14 more)
(+21 files in other folders)
