<package>
  <name>explorador_2</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for explorador_2</p>
    <p>This package contains configuration data, 3D models and launch files
for explorador_2 robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>joint_state_publisher</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <export>
    <architecture_independent />
  </export>
</package>
